# storage/api-docs/api-docs.json
@@ -959,14 +959,101 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Mostrar peticiones firmadas por el usuario logueado",
+                "summary": "Devuelve las peticiones firmadas por el usuario logueado",
                 "operationId": "80dbcadf913999ea1ada57c555d17f36",
                 "responses": {
                     "200": {
-                        "description": "Mostrar todas las peticiones."
-                    },
-                    "default": {
-                        "description": "Ha ocurrido un error."
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "number",
+                                                        "example": ""
+                                                    },
+                                                    "titulo": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "descripcion": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "destinatario": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "firmantes": {
+                                                        "type": "number",
+                                                        "example": ""
+                                                    },
+                                                    "estado": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    },
+                                                    "user_id": {
+                                                        "type": "number",
+                                                        "example": ""
+                                                    },
+                                                    "categoria_id": {
+                                                        "type": "number",
+                                                        "example": ""
+                                                    }
+                                                },
+                                                "type": "object"
+                                            },
+                                            "example": [
+                                                {
+                                                    "id": 1,
+                                                    "titulo": "lalala3",
+                                                    "descripcion": "lalala3",
+                                                    "destinatario": "lalala3",
+                                                    "firmantes": 0,
+                                                    "estado": "pendiente",
+                                                    "user_id": 1,
+                                                    "categoria_id": 1,
+                                                    "image": null,
+                                                    "created_at": "2022-05-03T07:47:11.000000Z",
+                                                    "updated_at": "2022-05-03T07:50:31.000000Z"
+                                                },
+                                                {
+                                                    "id": 11,
+                                                    "titulo": "lalala2",
+                                                    "descripcion": "lalala2",
+                                                    "destinatario": "lalala2",
+                                                    "firmantes": 0,
+                                                    "estado": "pendiente",
+                                                    "user_id": 1,
+                                                    "categoria_id": 1,
+                                                    "image": null,
+                                                    "created_at": "2022-05-03T07:47:22.000000Z",
+                                                    "updated_at": "2022-05-03T07:47:22.000000Z"
+                                                },
+                                                {
+                                                    "id": 21,
+                                                    "titulo": "lalala3",
+                                                    "descripcion": "lalala3",
+                                                    "destinatario": "lalala3",
+                                                    "firmantes": 0,
+                                                    "estado": "pendiente",
+                                                    "user_id": 1,
+                                                    "categoria_id": 1,
+                                                    "image": null,
+                                                    "created_at": "2022-05-03T08:06:02.000000Z",
+                                                    "updated_at": "2022-05-03T08:06:02.000000Z"
+                                                }
+                                            ]
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
